# traversability-nav2

./: README.md
heightmap/: package.xml  setup.cfg  setup.py
heightmap/heightmap/: heightmap_occupancy_grid.py  heightmap_transform.py  pcl_to_heightmap_img.py
heightmap/launch/: heightmap.launch.py
heightmap/rviz/: trail_rough_terrain.rviz
heightmap_msg/: CMakeLists.txt  package.xml
heightmap_msg/msg/: GridMap16.msg
nav2_heightmap_plugin/: CMakeLists.txt  heightmap_layer.xml  package.xml
nav2_heightmap_plugin/include/nav2_heightmap_plugin/: heightmap_layer.hpp  heightmap_layer_old.hpp
nav2_heightmap_plugin/src/: heightmap_layer.cpp  heightmap_layer_old.cpp
nav2_traversability_plugin/: CMakeLists.txt  package.xml  traversability_layer.xml
nav2_traversability_plugin/include/nav2_traversability_plugin/: traversability_layer.hpp
nav2_traversability_plugin/src/: traversability_layer.cpp
quad_surface_msg/: CMakeLists.txt  package.xml
quad_surface_msg/msg/: Quad.msg  QuadSurface.msg
traversability/: CMakeLists.txt  package.xml  setup.cfg  setup.py
traversability/config/: traversability_params.yaml
traversability/launch/: traversability.launch.py
traversability/traversability/: fused_traversability_map.py  grid_transform.py  pcl_to_heightmap.py  terrain_surface.py
z_surface_rviz_plugin/: CMakeLists.txt  package.xml  rviz_plugin.xml
z_surface_rviz_plugin/include/z_surface_rviz_plugin/: z_surface_rviz_plugin.hpp
z_surface_rviz_plugin/src/: z_surface_rviz_plugin.cpp
